# Struktur_data

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  app  cmake_install.cmake  make.sh  run.sh  run_temp.sh  setup-cmake.sh  temp.cpp
include/: CMakeLists.txt  Makefile  cmake_install.cmake  db.h  executor.h  main_lib.h  ui.h
src/: db.cpp  executor.cpp  main.cpp  ui.cpp
titip_allin/: a.out  all_in.cpp
